--- a/index.html
+++ b/index.html
@@ -3,311 +3,134 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Advanced OSINT Search Tool</title>
+<title>OSINT Search Tool</title>
 <style>
-  body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; }
-  h1 { color: #004a99; }
-  label { margin-right: 15px; cursor: pointer; }
-  fieldset { border: 1px solid #ccc; padding: 15px; margin-bottom: 20px; background: #fff; }
-  legend { font-weight: bold; }
-  .site-list { margin-top: 10px; }
-  .site-item { margin-bottom: 5px; }
-  .filters { margin-bottom: 10px; }
-  input[type="text"], input[type="file"] { padding: 6px; width: 250px; margin-right: 10px; }
-  button { padding: 8px 16px; margin-top: 10px; cursor: pointer; background: #004a99; color: white; border: none; border-radius: 3px; }
-  button:hover { background: #003366; }
-  .results { background: #fff; padding: 15px; border: 1px solid #ccc; max-height: 400px; overflow-y: auto; }
-  .result-item { border-bottom: 1px solid #ddd; padding: 8px 0; }
-  .result-title { font-weight: bold; }
-  .score { color: green; font-weight: bold; margin-left: 8px; }
-  .hidden { display: none; }
-  .category-header { cursor: pointer; font-weight: bold; margin-top: 15px; }
+  body { font-family: Arial, sans-serif; margin: 20px; }
+  h1 { text-align: center; }
+  .category-group { margin-bottom: 15px; }
+  .category-label { font-weight: bold; margin-right: 10px; }
+  .search-results { margin-top: 20px; }
+  .result { border: 1px solid #ddd; padding: 10px; margin-bottom: 10px; border-radius: 5px; }
+  .result h3 { margin: 0 0 5px 0; }
+  .result .relevance { font-weight: bold; color: #2a9d8f; }
+  .filters { margin-top: 10px; }
 </style>
 </head>
 <body>
 
-<h1>Advanced OSINT Search Tool</h1>
+<h1>OSINT Search Tool</h1>
 
-<form id="searchForm">
+<div>
+  <label for="keyword">Keyword Search:</label>
+  <input type="text" id="keyword" placeholder="Enter keyword" style="width: 300px;" />
+</div>
 
-  <fieldset>
-    <legend>Search Keywords</legend>
-    <input type="text" id="keyword" placeholder="Enter keywords (comma separated)" />
-  </fieldset>
+<div class="category-group">
+  <span class="category-label">Categories:</span>
+  <label><input type="checkbox" class="category-checkbox" data-category="company"> Company Searches</label>
+  <label><input type="checkbox" class="category-checkbox" data-category="transport"> Transport</label>
+  <label><input type="checkbox" class="category-checkbox" data-category="socialmedia"> Social Media</label>
+  <label><input type="checkbox" class="category-checkbox" data-category="court"> Court Searches</label>
+  <label><input type="checkbox" class="category-checkbox" data-category="sanctions"> Sanctions, Watchlists & PEPs</label>
+  <label><input type="checkbox" class="category-checkbox" data-category="offshore"> Offshore Companies</label>
+  <label><input type="checkbox" class="category-checkbox" data-category="occupation"> Occupation Registers</label>
+  <label><input type="checkbox" class="category-checkbox" data-category="domain"> Domain, Leaked & Cached</label>
+  <label><input type="checkbox" class="category-checkbox" data-category="genealogy"> Genealogy</label>
+</div>
 
-  <fieldset>
-    <legend>Categories (click to toggle all)</legend>
+<!-- Advanced filters for social media -->
+<div id="socialMediaFilters" style="display:none; margin-top:10px;">
+  <h4>Social Media Filters</h4>
+  <label>Workplace: <input type="text" id="smWorkplace" placeholder="e.g. Company XYZ" /></label>
+  <label>Location: <input type="text" id="smLocation" placeholder="e.g. London" /></label>
+</div>
 
-    <div>
-      <label><input type="checkbox" class="category-checkbox" data-category="company"> Company Searches</label>
-      <div class="site-list" id="companySites">
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="company" value="https://www.companieshouse.gov.uk"> Companies House</label><br/>
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="company" value="https://www.offshoreleaks.icij.org"> Offshore Leaks</label>
-      </div>
-    </div>
+<button id="searchBtn" style="margin-top: 15px;">Search</button>
 
-    <div>
-      <label><input type="checkbox" class="category-checkbox" data-category="socialmedia"> Social Media</label>
-      <div class="site-list" id="socialmediaSites">
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="socialmedia" value="https://www.linkedin.com/search/results/all/"> LinkedIn</label><br/>
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="socialmedia" value="https://www.facebook.com/search/top/"> Facebook</label>
-      </div>
-      <div class="filters" id="socialFilters" style="margin-top:10px; padding-left: 25px;">
-        <input type="text" id="workplace" placeholder="Workplace (LinkedIn only)" />
-        <input type="text" id="location" placeholder="Location (LinkedIn & Facebook)" />
-      </div>
-    </div>
-
-    <div>
-      <label><input type="checkbox" class="category-checkbox" data-category="courts"> Court Searches</label>
-      <div class="site-list" id="courtsSites">
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="courts" value="https://www.gov.uk/court-records"> UK Court Records</label>
-      </div>
-    </div>
-
-    <div>
-      <label><input type="checkbox" class="category-checkbox" data-category="sanctions"> Sanctions, Watchlists & PEPs</label>
-      <div class="site-list" id="sanctionsSites">
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="sanctions" value="https://www.un.org/securitycouncil/sanctions/information"> UN Sanctions List</label>
-      </div>
-    </div>
-
-    <div>
-      <label><input type="checkbox" class="category-checkbox" data-category="offshore"> Offshore Companies</label>
-      <div class="site-list" id="offshoreSites">
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="offshore" value="https://www.offshoreleaks.icij.org"> Offshore Leaks</label>
-      </div>
-    </div>
-
-    <div>
-      <label><input type="checkbox" class="category-checkbox" data-category="registers"> Occupation Registers</label>
-      <div class="site-list" id="registersSites">
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="registers" value="https://www.sra.org.uk/registration/"> SRA Register</label>
-      </div>
-    </div>
-
-    <div>
-      <label><input type="checkbox" class="category-checkbox" data-category="image"> Reverse Image Search</label>
-      <div class="site-list" id="imageSites">
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="image" value="https://images.google.com/searchbyimage?image_url="> Google Images</label><br/>
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="image" value="https://tineye.com/search?url="> TinEye</label>
-      </div>
-      <input type="file" id="imageUpload" accept="image/*" />
-    </div>
-
-    <div>
-      <label><input type="checkbox" class="category-checkbox" data-category="domain"> Domain, Leaked & Cached</label>
-      <div class="site-list" id="domainSites">
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="domain" value="https://www.domaintools.com/"> DomainTools</label>
-      </div>
-    </div>
-
-    <div>
-      <label><input type="checkbox" class="category-checkbox" data-category="genealogy"> Genealogy</label>
-      <div class="site-list" id="genealogySites">
-        <label class="site-item"><input type="checkbox" class="site-checkbox" data-category="genealogy" value="https://www.findmypast.co.uk/"> Find My Past</label>
-      </div>
-    </div>
-
-  </fieldset>
-
-  <button type="button" id="searchBtn">Search</button>
-  <button type="button" id="downloadBtn" disabled>Download Report CSV</button>
-</form>
-
-<h2>Search Results (<span id="resultCount">0</span>)</h2>
-<div class="results" id="results"></div>
+<div class="search-results" id="results"></div>
 
 <script>
-  const categoryCheckboxes = document.querySelectorAll('.category-checkbox');
-  const siteCheckboxes = document.querySelectorAll('.site-checkbox');
-  const socialFilters = document.getElementById('socialFilters');
-  const searchBtn = document.getElementById('searchBtn');
-  const downloadBtn = document.getElementById('downloadBtn');
-  const resultsDiv = document.getElementById('results');
-  const resultCountSpan = document.getElementById('resultCount');
-  const imageUploadInput = document.getElementById('imageUpload');
+// Sample sites database with categories and optional advanced params
+const sites = [
+  { name: "Companies House", url: "https://find-and-update.company-information.service.gov.uk/search?q={keyword}", categories: ["company"] },
+  { name: "Transport Registry", url: "https://transport-registry.example.com/search?q={keyword}", categories: ["transport"] },
+  { name: "LinkedIn", url: "https://www.linkedin.com/search/results/all/?keywords={keyword}&origin=GLOBAL_SEARCH_HEADER", categories: ["socialmedia"], supportsFilters: true },
+  { name: "Facebook", url: "https://www.facebook.com/search/top/?q={keyword}", categories: ["socialmedia"], supportsFilters: true },
+  { name: "Court Records", url: "https://court-records.example.com/search?q={keyword}", categories: ["court"] },
+  { name: "Sanctions List", url: "https://sanctions-list.example.com/search?q={keyword}", categories: ["sanctions"] },
+  { name: "Offshore Companies DB", url: "https://offshore-db.example.com/search?q={keyword}", categories: ["offshore"] },
+  { name: "Professional Register", url: "https://occupation-register.example.com/search?q={keyword}", categories: ["occupation"] },
+  { name: "Domain Leak Checker", url: "https://domain-leak.example.com/search?q={keyword}", categories: ["domain"] },
+  { name: "Genealogy Database", url: "https://genealogy-db.example.com/search?q={keyword}", categories: ["genealogy"] }
+];
 
-  // Toggle all sites under a category when category checkbox toggled
-  categoryCheckboxes.forEach(catCheckbox => {
-    catCheckbox.addEventListener('change', () => {
-      const category = catCheckbox.dataset.category;
-      const sites = document.querySelectorAll(`.site-checkbox[data-category="${category}"]`);
-      sites.forEach(site => site.checked = catCheckbox.checked);
-
-      // Show/hide advanced filters for social media category
-      if (category === 'socialmedia') {
-        socialFilters.style.display = catCheckbox.checked ? 'block' : 'none';
-      }
-    });
+// Show/hide social media filters if socialmedia category is checked
+document.querySelectorAll('.category-checkbox').forEach(cb => {
+  cb.addEventListener('change', () => {
+    const socialMediaChecked = [...document.querySelectorAll('.category-checkbox')]
+      .some(chk => chk.dataset.category === 'socialmedia' && chk.checked);
+    document.getElementById('socialMediaFilters').style.display = socialMediaChecked ? 'block' : 'none';
   });
+});
 
-  // Sync category checkbox if all individual sites checked/unchecked
-  siteCheckboxes.forEach(siteCheckbox => {
-    siteCheckbox.addEventListener('change', () => {
-      const category = siteCheckbox.dataset.category;
-      const catCheckbox = document.querySelector(`.category-checkbox[data-category="${category}"]`);
-      const sites = document.querySelectorAll(`.site-checkbox[data-category="${category}"]`);
-      catCheckbox.checked = Array.from(sites).every(s => s.checked);
-    });
-  });
+function buildSearchUrl(site, keyword, filters) {
+  let url = site.url.replace('{keyword}', encodeURIComponent(keyword));
 
-  // Image Upload reverse search
-  imageUploadInput.addEventListener('change', (e) => {
-    const file = e.target.files[0];
-    if (!file) return;
-
-    // We can't directly upload to Google/TinEye, but can open their search-by-image URLs with data URL or prompt user to upload manually
-    const reader = new FileReader();
-    reader.onload = function() {
-      const dataUrl = reader.result;
-      // For demonstration, open Google Images and TinEye with an instruction alert
-      alert('The image cannot be auto-uploaded to search engines due to restrictions.\nYou will be taken to search pages where you can upload the image manually.');
-      window.open('https://images.google.com/imghp?hl=en', '_blank');
-      window.open('https://tineye.com/', '_blank');
-    };
-    reader.readAsDataURL(file);
-  });
-
-  // Mock data to simulate search results for demo purpose
-  const mockResults = [
-    {
-      title: "Companies House: Satori Intelligence Ltd",
-      url: "https://www.companieshouse.gov.uk/company/12345678",
-      snippet: "Company registered in UK, active since 2019...",
-      categories: ["company"]
-    },
-    {
-      title: "LinkedIn Search: John Doe at Satori Intelligence",
-      url: "https://www.linkedin.com/in/johndoe",
-      snippet: "John Doe working at Satori Intelligence in London.",
-      categories: ["socialmedia"]
-    },
-    {
-      title: "UK Court Records: Judgement in case XYZ",
-      url: "https://www.gov.uk/court-records/caseXYZ",
-      snippet: "Judgement details for case XYZ involving offshore companies.",
-      categories: ["courts", "offshore"]
-    },
-    {
-      title: "UN Sanctions List: Jane Smith",
-      url: "https://www.un.org/securitycouncil/sanctions/list",
-      snippet: "Sanctioned individual named Jane Smith.",
-      categories: ["sanctions"]
-    },
-    {
-      title: "DomainTools: satori-intelligence.com",
-      url: "https://www.domaintools.com/satori-intelligence.com",
-      snippet: "Domain registered in 2018, no recent changes.",
-      categories: ["domain"]
+  // Add advanced filters for social media
+  if (site.supportsFilters && filters) {
+    if (filters.workplace) {
+      url += `&workplace=${encodeURIComponent(filters.workplace)}`;
     }
-  ];
+    if (filters.location) {
+      url += `&location=${encodeURIComponent(filters.location)}`;
+    }
+  }
+  return url;
+}
 
-  // Simple relevance scoring: count keyword occurrences in snippet & title
-  function getRelevanceScore(text, keywords) {
-    let score = 0;
-    keywords.forEach(kw => {
-      const regex = new RegExp(kw.trim(), 'gi');
-      const matches = text.match(regex);
-      if (matches) score += matches.length;
-    });
-    return score;
+function simulateRelevanceScore(keyword, siteName) {
+  // Simple dummy function: higher score if site name contains keyword letters
+  let score = 50;
+  if (siteName.toLowerCase().includes(keyword.toLowerCase())) {
+    score += 30;
+  }
+  if (keyword.length > 5) {
+    score += 10;
+  }
+  return Math.min(score, 100);
+}
+
+document.getElementById('searchBtn').addEventListener('click', () => {
+  const keyword = document.getElementById('keyword').value.trim();
+  if (!keyword) {
+    alert("Please enter a keyword to search.");
+    return;
   }
 
-  // Build search URLs with filters where applicable
-  function buildSearchUrl(baseUrl, keyword, filters) {
-    if (!keyword) return baseUrl;
+  // Gather checked categories
+  const checkedCategories = [...document.querySelectorAll('.category-checkbox:checked')]
+    .map(cb => cb.dataset.category);
 
-    let url = baseUrl;
-    // For LinkedIn & Facebook add query params for advanced filters
-    if (url.includes('linkedin.com/search')) {
-      // Example LinkedIn URL with keywords, location, and company
-      const q = encodeURIComponent(keyword + (filters.workplace ? ` AND company:${filters.workplace}` : '') + (filters.location ? ` AND location:${filters.location}` : ''));
-      url = `https://www.linkedin.com/search/results/all/?keywords=${q}`;
-    } else if (url.includes('facebook.com/search')) {
-      // Facebook search with keywords & location not really supported fully, just basic keywords
-      const q = encodeURIComponent(keyword);
-      url = `https://www.facebook.com/search/top/?q=${q}`;
-    } else if (url.includes('searchbyimage?image_url=')) {
-      // For reverse image search URLs, keyword ignored
-    } else {
-      // Append keyword as query param if site supports it
-      if (url.includes('?')) url += `&q=${encodeURIComponent(keyword)}`;
-      else url += `?q=${encodeURIComponent(keyword)}`;
-    }
-    return url;
+  if (checkedCategories.length === 0) {
+    alert("Please select at least one category.");
+    return;
   }
 
-  function performSearch() {
-    resultsDiv.innerHTML = '';
-    let keywords = document.getElementById('keyword').value.trim();
-    if (!keywords) {
-      alert('Please enter at least one keyword.');
-      return;
-    }
-    const keywordArr = keywords.split(',').map(k => k.trim()).filter(k => k.length > 0);
-    if (keywordArr.length === 0) {
-      alert('Please enter valid keywords.');
-      return;
-    }
+  // Get social media filters if any
+  const filters = {
+    workplace: document.getElementById('smWorkplace').value.trim(),
+    location: document.getElementById('smLocation').value.trim()
+  };
 
-    // Collect checked sites
-    const selectedSites = Array.from(siteCheckboxes).filter(cb => cb.checked);
-    if (selectedSites.length === 0) {
-      alert('Please select at least one site or category.');
-      return;
-    }
+  // Filter sites by selected categories
+  const filteredSites = sites.filter(site =>
+    site.categories.some(cat => checkedCategories.includes(cat))
+  );
 
-    const workplace = document.getElementById('workplace').value.trim();
-    const location = document.getElementById('location').value.trim();
+  // Build results HTML
+  let html = `<h2>Search Results for "${keyword}"</h2>`;
+  html += `<p>Categories: ${checkedCategories.join(', ')}</p>`;
 
-    // Filter mock results by selected categories and score relevance
-    let filteredResults = [];
-
-    selectedSites.forEach(site => {
-      const baseUrl = site.value;
-      const category = site.dataset.category;
-      // For demonstration, find mockResults with matching categories
-      const matchedResults = mockResults.filter(r => r.categories.includes(category));
-
-      matchedResults.forEach(res => {
-        // Calculate relevance score on title + snippet
-        const combinedText = res.title + ' ' + res.snippet;
-        const score = getRelevanceScore(combinedText, keywordArr);
-        filteredResults.push({
-          title: res.title,
-          url: buildSearchUrl(baseUrl, keywords, {workplace, location}),
-          snippet: res.snippet,
-          score,
-          category
-        });
-      });
-    });
-
-    // Remove duplicates by url (keep highest score)
-    const uniqueResultsMap = new Map();
-    filteredResults.forEach(r => {
-      if (!uniqueResultsMap.has(r.url) || uniqueResultsMap.get(r.url).score < r.score) {
-        uniqueResultsMap.set(r.url, r);
-      }
-    });
-
-    const uniqueResults = Array.from(uniqueResultsMap.values());
-
-    // Sort by relevance score descending
-    uniqueResults.sort((a, b) => b.score - a.score);
-
-    // Display results
-    if (uniqueResults.length === 0) {
-      resultsDiv.innerHTML = '<em>No results found for your selection and keywords.</em>';
-      resultCountSpan.textContent = '0';
-      downloadBtn.disabled = true;
-      return;
-    }
-
-    let html = '';
-    uniqueResults.forEach(r => {
-      html += `
-        <div class="result-item">
-          <a class="result-title" href="${r.url}" target
-
+  filteredSites.forEach(site => {
+    const searchU
+    
