--- a/index.html
+++ b/index.html
@@ -5,128 +5,157 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OSINT Search Tool</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f9f9f9;
-    }
-    h1 {
-      font-size: 2em;
-      margin-bottom: 10px;
-    }
-    .category {
-      margin-bottom: 15px;
-    }
-    .site-list {
-      margin-left: 20px;
-      font-size: 0.95em;
-      color: #333;
-    }
-    input[type="text"], button {
-      padding: 10px;
-      margin: 10px 0;
-      font-size: 1em;
-    }
-    .results {
-      margin-top: 30px;
-    }
-    .result-entry {
-      background: #fff;
-      padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px #ccc;
-      margin-bottom: 10px;
-    }
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    h1 { color: #333; }
+    .section { margin-bottom: 30px; }
+    .category, .site { padding: 5px; }
+    .site-input, .category-input { margin: 5px 0; }
+    .site-list { margin-top: 10px; }
+    button { margin-left: 5px; }
+    input[type="text"] { padding: 5px; width: 300px; }
+    .hidden { display: none; }
+    .checkbox-list { margin-left: 20px; }
   </style>
 </head>
 <body>
   <h1>OSINT Search Tool</h1>
 
-  <label for="keyword">Enter keyword:</label><br />
-  <input type="text" id="keyword" placeholder="Type your search term..." size="40" />
-  
-  <h2>Select Categories:</h2>
-  <div id="categoryList"></div>
-
-  <button onclick="search()">Search</button>
-
-  <h2>Add a Website</h2>
-  <input type="text" id="newSiteUrl" placeholder="Website URL" size="40"/>
-  <input type="text" id="newSiteCategory" placeholder="Category (must match or be new)" size="30"/>
-  <button onclick="addSite()">Add Website</button>
-
-  <div class="results">
-    <h2>Search Results</h2>
-    <div id="resultsContainer"></div>
+  <div class="section">
+    <label><strong>Enter Keyword:</strong></label><br/>
+    <input type="text" id="keywordInput" placeholder="e.g. John Smith" />
+    <button onclick="runSearch()">Search</button>
   </div>
 
-  <script>
-    const categories = {
-      "Company Searches": ["https://find-and-update.company-information.service.gov.uk/"],
-      "Court Case Searches": ["https://www.casemine.com/"],
-      "Occupation Registers": ["https://www.gdc-uk.org/pages/searchregisters.aspx"],
-      "Genealogy": ["https://probatesearch.service.gov.uk/#wills"],
-      "Transport": ["https://cartaxcheck.co.uk/"],
-      "Sanctions, Watchlists, PEPs": ["https://www.insolvencydirect.bis.gov.uk/eiir/search"],
-      "Social Media": ["https://www.facebook.com/"],
-      "Offshore Companies": ["https://offshoreleaks.icij.org/"],
-      "Domain/Leaked/Cached": ["https://who.is/"]
-    };
+  <div class="section">
+    <h2>Categories & Sites</h2>
+    <div id="categoryContainer"></div>
+    <button onclick="showAddCategory()">+ Add Category</button>
+    <div id="addCategoryForm" class="hidden">
+      <input type="text" id="newCategoryName" placeholder="Category name" />
+      <button onclick="addCategory()">Save</button>
+    </div>
+  </div>
 
-    function renderCategories() {
-      const container = document.getElementById("categoryList");
-      container.innerHTML = "";
-      for (const cat in categories) {
-        const div = document.createElement("div");
-        div.className = "category";
-        div.innerHTML = `
-          <input type="checkbox" id="${cat}" name="category" value="${cat}" />
-          <label for="${cat}">${cat}</label>
-          <div class="site-list">${categories[cat].join("<br>")}</div>
-        `;
-        container.appendChild(div);
-      }
-    }
+  <div class="section">
+    <h2>Add Website</h2>
+    <input type="text" id="siteName" placeholder="Website name" class="site-input" />
+    <input type="text" id="siteURL" placeholder="Website URL (https://...)" class="site-input" />
+    <label>Select Categories:</label><br/>
+    <div id="categoryCheckboxes" class="checkbox-list"></div>
+    <button onclick="addWebsite()">Add Website</button>
+  </div>
 
-    function addSite() {
-      const url = document.getElementById("newSiteUrl").value.trim();
-      const category = document.getElementById("newSiteCategory").value.trim();
-      if (!url || !category) return alert("Please enter both a URL and category.");
-      if (!categories[category]) categories[category] = [];
-      if (!categories[category].includes(url)) {
-        categories[category].push(url);
-        renderCategories();
-        alert("Website added.");
-      } else {
-        alert("This site already exists in that category.");
-      }
-    }
+  <div class="section">
+    <h2>Search Results</h2>
+    <div id="results"></div>
+  </div>
 
-    function search() {
-      const keyword = document.getElementById("keyword").value.trim();
-      if (!keyword) return alert("Please enter a keyword.");
+<script>
+let categories = JSON.parse(localStorage.getItem('osintCategories')) || {
+  "Company Searches": ["https://find-and-update.company-information.service.gov.uk/"],
+  "Court Case Searches": ["https://www.casemine.com/"],
+  "Occupation Registers": ["https://www.gdc-uk.org/pages/searchregisters.aspx"],
+  "Genealogy": ["https://probatesearch.service.gov.uk/#wills"],
+  "Transport": ["https://cartaxcheck.co.uk/"],
+  "Sanctions, Watchlists, PEPs": ["https://www.insolvencydirect.bis.gov.uk/eiir/search"],
+  "Social Media": ["https://www.facebook.com/"],
+  "Offshore Companies": ["https://offshoreleaks.icij.org/"],
+  "Domain/Leaked/Cached": ["https://who.is/"]
+};
 
-      const checked = [...document.querySelectorAll("input[name='category']:checked")].map(e => e.value);
-      if (checked.length === 0) return alert("Please select at least one category.");
+function saveCategories() {
+  localStorage.setItem('osintCategories', JSON.stringify(categories));
+}
 
-      const resultContainer = document.getElementById("resultsContainer");
-      resultContainer.innerHTML = "";
+function renderCategories() {
+  const container = document.getElementById('categoryContainer');
+  const checkboxArea = document.getElementById('categoryCheckboxes');
+  container.innerHTML = '';
+  checkboxArea.innerHTML = '';
+  Object.entries(categories).forEach(([cat, urls]) => {
+    const catDiv = document.createElement('div');
+    catDiv.className = 'category';
+    catDiv.innerHTML = `
+      <strong>${cat}</strong>
+      <button onclick="deleteCategory('${cat}')">Delete</button>
+      <ul>
+        ${urls.map(url => `<li>${url} <button onclick="deleteSite('${cat}', '${url}')">x</button></li>`).join('')}
+      </ul>
+    `;
+    container.appendChild(catDiv);
 
-      checked.forEach(cat => {
-        categories[cat].forEach(site => {
-          const result = document.createElement("div");
-          result.className = "result-entry";
-          result.innerHTML = `
-            <strong>${cat}</strong><br/>
-            <a href="${site}" target="_blank">${site}</a><br/>
-            <em>Searched for: <strong>${keyword}</strong></em>
-          `;
-          resultContainer.appendChild(result);
-        });
-      });
-    }
+    const checkbox = document.createElement('div');
+    checkbox.innerHTML = `
+      <input type="checkbox" id="cat_${cat}" value="${cat}" />
+      <label for="cat_${cat}">${cat}</label>
+    `;
+    checkboxArea.appendChild(checkbox);
+  });
+}
 
+function showAddCategory() {
+  document.getElementById('addCategoryForm').classList.remove('hidden');
+}
+
+function addCategory() {
+  const name = document.getElementById('newCategoryName').value.trim();
+  if (name && !categories[name]) {
+    categories[name] = [];
+    saveCategories();
     renderCategories();
-  </script>
+    document.getElementById('newCategoryName').value = '';
+    document.getElementById('addCategoryForm').classList.add('hidden');
+  }
+}
+
+function deleteCategory(cat) {
+  if (confirm('Delete category and all associated websites?')) {
+    delete categories[cat];
+    saveCategories();
+    renderCategories();
+  }
+}
+
+function deleteSite(cat, url) {
+  categories[cat] = categories[cat].filter(u => u !== url);
+  saveCategories();
+  renderCategories();
+}
+
+function addWebsite() {
+  const name = document.getElementById('siteName').value.trim();
+  const url = document.getElementById('siteURL').value.trim();
+  const checkboxes = document.querySelectorAll('#categoryCheckboxes input:checked');
+  if (!url || checkboxes.length === 0) return alert('Enter URL and select category');
+
+  checkboxes.forEach(cb => {
+    if (categories[cb.value] && !categories[cb.value].includes(url)) {
+      categories[cb.value].push(url);
+    }
+  });
+  saveCategories();
+  renderCategories();
+  document.getElementById('siteName').value = '';
+  document.getElementById('siteURL').value = '';
+  document.querySelectorAll('#categoryCheckboxes input').forEach(i => i.checked = false);
+}
+
+function runSearch() {
+  const keyword = document.getElementById('keywordInput').value.trim();
+  const checked = [...document.querySelectorAll('#categoryCheckboxes input:checked')].map(i => i.value);
+  let results = '';
+  checked.forEach(cat => {
+    categories[cat].forEach(site => {
+      const encoded = encodeURIComponent(keyword);
+      results += `<div><a href="${site}" target="_blank">${site}</a> [${cat}]</div>`;
+    });
+  });
+  document.getElementById('results').innerHTML = results || '<em>No results – enter keyword and select categories.</em>';
+}
+
+// Initial render
+renderCategories();
+</script>
+
 </body>
 </html>
